[FIX] web_enterprise: fix border color of .card
The migration to BS4 introduced card instead of panel and well, and we kept the
border that was previously on the well. However this is not necessary for card.

This commit will let the card border take its default relevant value instead of
a white that is invisible on our usual white background. Before this commit the
border of the card also didn't adapt depending on the background color.

--- a/web_enterprise/static/src/scss/bootstrap_overridden.scss
+++ b/web_enterprise/static/src/scss/bootstrap_overridden.scss
@@ -141,7 +141,6 @@ $nav-tabs-link-active-border-color: transparent;
 
 // Cards
 
-$card-border-color: $gray-100;
 $card-bg: $gray-100;
 
 // Badges
